# parallels-detection

./: .gitignore  .gitmodules  =12  README.md  convert_tibetan.py  download_to_disk_tibet.py  pipeline_config.yaml  requirements.txt  run_pipeline.py  setup_submodule.py
detection/: QUICKSTART.md  README.md  STATUS.md  config.yaml  pyproject.toml  requirements.txt  test_config.yaml
detection/data/: embeddings.npy
detection/data/embeddings_by_line/: embeddings_metadata.json  line_000114_embeddings.npy  line_000114_segments.xlsx  line_000115_embeddings.npy  line_000115_segments.xlsx  line_000116_embeddings.npy  line_000116_segments.xlsx  line_011164_embeddings.npy  line_011164_segments.xlsx
detection/parallels/: config.py  pipeline.py
detection/parallels.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
detection/parallels/data/: __init__.py  output_writer.py  segment_store.py
detection/parallels/index/: __init__.py  faiss_index.py
detection/parallels/matching/: __init__.py  base.py  filters.py  knn_matcher.py
detection/scripts/: generate_test_data.py
detection/src/: __init__.py  batched_config.py  batched_pipeline.py  cli.py  models.py
detection/src/data/: __init__.py  corpus_loader.py  output_writer.py
detection/src/index/: faiss_index.py
detection/src/matching/: threshold_matcher.py
detection/tests/: __init__.py  test_pipeline.py
embedding/: .gitignore  README.md  config.yaml  example_usage.py  generate_embeddings.py  pyproject.toml  requirements.txt  sanity_check.py
embedding/embedding/: __init__.py  cli.py  config.py  models.py  pipeline.py
embedding/tests/: test_pipeline.py
enriching/: README.md  __init__.py  enriching_config.yaml  pyproject.toml  requirements.txt
enriching/src/: __init__.py  cli.py  config.py  models.py  pipeline.py
enriching/src/enrichers/: __init__.py  base.py  fuzzy_matcher.py  mapping_type.py  tibetan_particles.py  wylie_levenshtein.py
indexing/: README.md  pyproject.toml
indexing/indexer/: __init__.py
indexing/tests/: __init__.py
scripts/: analyze_input.py  convert_to_jsonl.py  purge.py  purge_data.sh
segmentation/: MIGRATION.md  README.md  config.yaml  download_to_disk_tibet.py  pyproject.toml  tibet_segmentation.py
segmentation/output/overlapping/Full_Files/: I1PD97353.xlsx  Unknown_Source.xlsx
segmentation/segmenter/: __init__.py  cli.py  config.py  converter_utils.py  models.py  pipeline.py
segmentation/segmenter/data/: __init__.py  azure_downloader.py
segmentation/segmenter/engines/: __init__.py  base.py  botok_engine.py  regex_engine.py
segmentation/segmenter/utils/: __init__.py  overlapping.py  syllable_constraint.py  text_normalizer.py  word_constraint.py
segmentation/test_output/overlapping/Full_Files/: All_Segments.csv
segmentation/tests/: __init__.py
sequence-matching/: README.md  config.yaml  lihi.py  requirements.txt  run.py  test_lihi.txt
sequence-matching/input/: 001_'dul_ba_ka_wylie.txt  002_'dul_ba_kha_wylie.txt
sequence-matching/output/: rebecca_D2672_vs_derge.csv  rebecca_D2672_vs_derge.docx  results.csv  sonam_testdata14_vs_canon.csv  sonam_testdata14_vs_kangyur.csv  sonam_testdata15.csv  test_data10_sonam.csv  test_data12_orna.csv  test_data12_orna_new.csv  test_data12_orna_new.docx  test_data13_nicola.csv  test_data5_rebecca.csv  test_data5_rebecca.docx  test_data6_sonam.csv  test_data6_sonam.docx  (+4 more)
(+346 files in other folders)
