[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enriching"
version = "0.1.0"
description = "Enrich parallel matches with additional fields"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-Levenshtein>=0.21.0",
    "fuzzywuzzy>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
enriching = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
